in-tree/lua-integration/tests/compile_fail/struct_on_enum.rs
use lua_integration::LuaIntegration;

#[derive(LuaIntegration)]
pub enum ShouldFail {
    Variant,
}

fn main() {}
